# ESP-USB2CAN-app

./: .gitignore  GITHUB_SETUP.md  README.md  esp-usb2can-app.spec  main.py  pyproject.toml  requirements.txt  run_gui.py
src/usb2can_gui/: __init__.py  __main__.py  bridge.py  bus_load.py  can_filter_panel.py  can_log.py  main_window.py  protocol.py  send_frame.py  styles.py
